--- a/prepros.cfg
+++ b/prepros.cfg
@@ -177,15 +177,18 @@
           "output": "css/blocks/main_menu.css",
           "name": "main_menu.less",
           "category": "CSS",
-          "autoCompile": true,
+          "autoCompile": false,
           "autoprefixer": false,
           "compress": false,
           "sourceMaps": false,
           "strictMath": false,
           "strictUnits": false,
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "ab21eacc",
+            "8da580d7"
+          ],
           "type": "less"
         },
         "d96e2504": {
