Добавлена резина и часть медиавыражений

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -104,7 +104,7 @@
           "category": "CSS",
           "autoCompile": true,
           "autoprefixer": true,
-          "compress": true,
+          "compress": false,
           "sourceMaps": true,
           "strictMath": false,
           "strictUnits": false,
@@ -147,8 +147,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "8da580d7",
-            "ab21eacc"
+            "ab21eacc",
+            "8da580d7"
           ],
           "type": "less"
         },
