--- a/prepros.cfg
+++ b/prepros.cfg
@@ -930,6 +930,26 @@
           "optimized": false,
           "height": 278,
           "width": 158
+        },
+        "c5285512": {
+          "id": "c5285512",
+          "path": "less/blocks/ads.less",
+          "output": "css/blocks/ads.css",
+          "name": "ads.less",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "compress": false,
+          "sourceMaps": false,
+          "strictMath": false,
+          "strictUnits": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "ab21eacc",
+            "8da580d7"
+          ],
+          "type": "less"
         }
       },
       "deploymentHistory": {},
