tablet version base

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -950,6 +950,52 @@
             "8da580d7"
           ],
           "type": "less"
+        },
+        "3b87bf8b": {
+          "id": "3b87bf8b",
+          "path": "img/map2.png",
+          "output": "img/map2.png",
+          "name": "map2.png",
+          "category": "IMAGE",
+          "size": 199064,
+          "type": "png",
+          "initialSize": 199064,
+          "optimized": false,
+          "height": 539,
+          "width": 700
+        },
+        "726fde96": {
+          "id": "726fde96",
+          "path": "less/blocks/main_page_footer.less",
+          "output": "css/blocks/main_page_footer.css",
+          "name": "main_page_footer.less",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "compress": false,
+          "sourceMaps": false,
+          "strictMath": false,
+          "strictUnits": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "ab21eacc",
+            "8da580d7"
+          ],
+          "type": "less"
+        },
+        "5e977ee6": {
+          "id": "5e977ee6",
+          "path": "img/map.png",
+          "output": "img/map.png",
+          "name": "map.png",
+          "category": "IMAGE",
+          "size": 138331,
+          "type": "png",
+          "initialSize": 138331,
+          "optimized": false,
+          "height": 384,
+          "width": 700
         }
       },
       "deploymentHistory": {},
