start pc_version

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -996,6 +996,32 @@
           "optimized": false,
           "height": 384,
           "width": 700
+        },
+        "cbc8a539": {
+          "id": "cbc8a539",
+          "path": "img/iphone_screen.png",
+          "output": "img/iphone_screen.png",
+          "name": "iphone_screen.png",
+          "category": "IMAGE",
+          "size": 76044,
+          "type": "png",
+          "initialSize": 76044,
+          "optimized": false,
+          "height": 320,
+          "width": 157
+        },
+        "107d278a": {
+          "id": "107d278a",
+          "path": "img/background-3@1x.jpg",
+          "output": "img/background-3@1x.jpg",
+          "name": "background-3@1x.jpg",
+          "category": "IMAGE",
+          "size": 109431,
+          "type": "jpg",
+          "initialSize": 109431,
+          "optimized": false,
+          "height": 854,
+          "width": 1200
         }
       },
       "deploymentHistory": {},
