--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1022,6 +1022,26 @@
           "optimized": false,
           "height": 854,
           "width": 1200
+        },
+        "3b83c245": {
+          "id": "3b83c245",
+          "path": "less/blocks/price.less",
+          "output": "css/blocks/price.css",
+          "name": "price.less",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "compress": false,
+          "sourceMaps": false,
+          "strictMath": false,
+          "strictUnits": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "ab21eacc",
+            "8da580d7"
+          ],
+          "type": "less"
         }
       },
       "deploymentHistory": {},
