--- a/prepros.cfg
+++ b/prepros.cfg
@@ -951,19 +951,6 @@
           ],
           "type": "less"
         },
-        "3b87bf8b": {
-          "id": "3b87bf8b",
-          "path": "img/map2.png",
-          "output": "img/map2.png",
-          "name": "map2.png",
-          "category": "IMAGE",
-          "size": 199064,
-          "type": "png",
-          "initialSize": 199064,
-          "optimized": false,
-          "height": 539,
-          "width": 700
-        },
         "726fde96": {
           "id": "726fde96",
           "path": "less/blocks/main_page_footer.less",
@@ -983,19 +970,6 @@
             "8da580d7"
           ],
           "type": "less"
-        },
-        "5e977ee6": {
-          "id": "5e977ee6",
-          "path": "img/map.png",
-          "output": "img/map.png",
-          "name": "map.png",
-          "category": "IMAGE",
-          "size": 138331,
-          "type": "png",
-          "initialSize": 138331,
-          "optimized": false,
-          "height": 384,
-          "width": 700
         },
         "cbc8a539": {
           "id": "cbc8a539",
@@ -1042,6 +1016,58 @@
             "8da580d7"
           ],
           "type": "less"
+        },
+        "3b87bf8b": {
+          "id": "3b87bf8b",
+          "path": "img/map2.png",
+          "output": "img/map2.png",
+          "name": "map2.png",
+          "category": "IMAGE",
+          "size": 138331,
+          "type": "png",
+          "initialSize": 138331,
+          "optimized": false,
+          "height": 384,
+          "width": 700
+        },
+        "b37be6a0": {
+          "id": "b37be6a0",
+          "path": "img/map3.png",
+          "output": "img/map3.png",
+          "name": "map3.png",
+          "category": "IMAGE",
+          "size": 234741,
+          "type": "png",
+          "initialSize": 234741,
+          "optimized": false,
+          "height": 383,
+          "width": 1200
+        },
+        "2b64bffd": {
+          "id": "2b64bffd",
+          "path": "img/map1.png",
+          "output": "img/map1.png",
+          "name": "map1.png",
+          "category": "IMAGE",
+          "size": 38378,
+          "type": "png",
+          "initialSize": 38378,
+          "optimized": false,
+          "height": 238,
+          "width": 320
+        },
+        "5e45240c": {
+          "id": "5e45240c",
+          "path": "img/hit.png",
+          "output": "img/hit.png",
+          "name": "hit.png",
+          "category": "IMAGE",
+          "size": 1402,
+          "type": "png",
+          "initialSize": 1402,
+          "optimized": false,
+          "height": 61,
+          "width": 61
         }
       },
       "deploymentHistory": {},
