--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1068,6 +1068,21 @@
           "optimized": false,
           "height": 61,
           "width": 61
+        },
+        "a0233e7c": {
+          "id": "a0233e7c",
+          "path": "js/script.js",
+          "output": "js/script-dist.js",
+          "name": "script.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
