fix polyfill and borders

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1083,6 +1083,21 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "2018f7a3": {
+          "id": "2018f7a3",
+          "path": "js/picturefill.min.js",
+          "output": "js/picturefill.min-dist.js",
+          "name": "picturefill.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
