--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
     "name" : "pink",
     "dependencies" : {
         "grunt": "*",
+        "grunt-cli":"*",
+        "load-grunt-tasks":"*",
         "grunt-contrib-less": "*",
         "grunt-autoprefixer": "*",
         "grunt-combine-media-queries": "*",
